--- a/ACO Notebook.ipynb
+++ b/ACO Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,8 @@
     "import numpy as np\n",
     "import random\n",
     "\n",
-    "\n",
+    "import numpy as np\n",
+    "import random\n",
     "\n",
     "class AntColonyOptimizer:\n",
     "    def __init__(self, distance_matrix, num_ants, evaporation_rate, alpha, beta, Q, max_fitness_evaluations, show_progress=False):\n",
@@ -179,9 +180,12 @@
     "        self.num_cities = distance_matrix.shape[0]\n",
     "        self.show_progress = show_progress\n",
     "\n",
-    "        self.eta = 1.0 / (distance_matrix + np.finfo(float).eps)\n",
-    "        self.eta[np.eye(self.num_cities, dtype=bool)] = 0\n",
+    "        self.eta = 1.0 / (distance_matrix + np.finfo(float).eps)  # Adding a small epsilon to avoid division by zero\n",
+    "        self.eta[np.eye(self.num_cities, dtype=bool)] = 0  # Set diagonal to zero to avoid self-loop\n",
     "\n",
+    "        self.best_solution = None\n",
+    "        self.best_cost = float('inf')\n",
+    "        self.elitist_weight = 1  # Adjust as needed, this is the extra weight for the best ant\n",
     "\n",
     "        # Initialize pheromone levels\n",
     "        self.pheromone_matrix = np.random.uniform(low=0.1, high=1.0, size=(self.num_cities, self.num_cities))\n",
@@ -211,6 +215,13 @@
     "\n",
     "            self.update_pheromones(solutions)\n",
     "            self.evaporate_pheromones()\n",
+    "            \n",
+    "            # Inside the while loop, after generating solutions\n",
+    "            for solution, cost in solutions:\n",
+    "                if cost < self.best_cost:\n",
+    "                    self.best_cost = cost\n",
+    "                    self.best_solution = solution\n",
+    "\n",
     "\n",
     "            start_city = (start_city + 1) % self.num_cities  # Change start city for next iteration\n",
     "\n",
@@ -256,29 +267,73 @@
     "\n",
     "\n",
     "    def update_pheromones(self, solutions):\n",
-    "        self.pheromone_delta.fill(0)  # Reset pheromone_delta matrix to zero\n",
+    "        # Reset the pheromone delta matrix\n",
+    "        self.pheromone_delta.fill(0)\n",
     "\n",
+    "        # Update pheromone for all ants\n",
     "        for solution, cost in solutions:\n",
-    "            for i in range(len(solution) - 1):\n",
-    "                self.pheromone_delta[solution[i], solution[i + 1]] += self.Q / cost\n",
+    "            indices = np.array(solution)\n",
+    "            self.pheromone_delta[indices[:-1], indices[1:]] += self.Q / cost\n",
     "\n",
-    "        # Apply the pheromone updates in a vectorized way\n",
+    "        # Additional pheromone for the best solution so far\n",
+    "        if self.best_solution is not None:\n",
+    "            best_indices = np.array(self.best_solution)\n",
+    "            self.pheromone_delta[best_indices[:-1], best_indices[1:]] += self.elitist_weight * self.Q / self.best_cost\n",
+    "\n",
+    "        # Update the pheromone matrix\n",
     "        self.pheromone_matrix += self.pheromone_delta\n",
     "\n",
     "    def evaporate_pheromones(self):\n",
-    "        self.pheromone_matrix *= (1 - self.evaporation_rate)"
+    "        self.pheromone_matrix *= (1 - self.evaporation_rate)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Best Cost: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">26577.0</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Best Cost: \u001b[1;36m26577.0\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Best Cost: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">25799.0</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Best Cost: \u001b[1;36m25799.0\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r"
+     ]
+    }
+   ],
    "source": [
-    "# aco = AntColonyOptimizer(matrix, num_ants=10, evaporation_rate=0.3, alpha=1, beta=2, Q=100, max_fitness_evaluations=10000)\n",
-    "# best_solution, best_cost = aco.run()\n",
-    "# print(\"Best Solution:\", best_solution)\n",
-    "# print(\"Best Cost:\", best_cost)\n",
+    "best_cost = float('inf')\n",
+    "\n",
+    "while best_cost > 25800:\n",
+    "    aco = AntColonyOptimizer(matrix, num_ants=10, evaporation_rate=0.1, alpha=1, beta=2, Q=100, max_fitness_evaluations=10000)\n",
+    "    best_solution, best_cost = aco.run()\n",
+    "    # print(\"Best Solution:\", best_solution)\n",
+    "    print(\"Best Cost:\", best_cost)\n",
     "# 25769.0\n",
     "# 13.8s\n",
     "# 26100.0\n",
@@ -291,12 +346,100 @@
     "#     aco = AntColonyOptimizer(matrix, num_ants=ant_num, evaporation_rate=0.3, alpha=1, beta=2, Q=100, max_fitness_evaluations=10000)\n",
     "#     best_solution, best_cost = aco.run()\n",
     "#     # print(f\"Best Cost for {ant_num} ants:\", best_cost)\n",
-    "#     results[ant_num] = best_cost\n"
+    "#     results[ant_num] = best_cost\n",
+    "\n",
+    "# 13.8s - 26599.0\n",
+    "# with changes\n",
+    "# 13.3s - 28106"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[33,\n",
+       " 45,\n",
+       " 55,\n",
+       " 44,\n",
+       " 32,\n",
+       " 28,\n",
+       " 2,\n",
+       " 34,\n",
+       " 9,\n",
+       " 51,\n",
+       " 50,\n",
+       " 46,\n",
+       " 48,\n",
+       " 42,\n",
+       " 26,\n",
+       " 11,\n",
+       " 56,\n",
+       " 22,\n",
+       " 4,\n",
+       " 57,\n",
+       " 23,\n",
+       " 43,\n",
+       " 17,\n",
+       " 0,\n",
+       " 29,\n",
+       " 12,\n",
+       " 39,\n",
+       " 24,\n",
+       " 8,\n",
+       " 31,\n",
+       " 19,\n",
+       " 52,\n",
+       " 49,\n",
+       " 3,\n",
+       " 7,\n",
+       " 21,\n",
+       " 54,\n",
+       " 53,\n",
+       " 1,\n",
+       " 40,\n",
+       " 47,\n",
+       " 38,\n",
+       " 10,\n",
+       " 15,\n",
+       " 37,\n",
+       " 30,\n",
+       " 6,\n",
+       " 41,\n",
+       " 20,\n",
+       " 35,\n",
+       " 16,\n",
+       " 25,\n",
+       " 18,\n",
+       " 5,\n",
+       " 27,\n",
+       " 13,\n",
+       " 36,\n",
+       " 14]"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r"
+     ]
+    }
+   ],
+   "source": [
+    "best_solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +472,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓  \n",
+      "   \r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO Notebook.ipynb Cell 6\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m     \u001b[39m# Using yaspin to show a spinner while the optimizer is running\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=46'>47</a>\u001b[0m     \u001b[39mwith\u001b[39;00m yaspin() \u001b[39mas\u001b[39;00m spinner:\n\u001b[0;32m---> <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=47'>48</a>\u001b[0m         best_solution, best_cost \u001b[39m=\u001b[39m aco\u001b[39m.\u001b[39;49mrun()\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=48'>49</a>\u001b[0m         spinner\u001b[39m.\u001b[39mok(\u001b[39m\"\u001b[39m\u001b[39m✓\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=50'>51</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;32m/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO Notebook.ipynb Cell 6\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=35'>36</a>\u001b[0m solutions \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_ants):\n\u001b[0;32m---> <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=38'>39</a>\u001b[0m     solution, cost \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgenerate_solution(start_city)\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=39'>40</a>\u001b[0m     solutions\u001b[39m.\u001b[39mappend((solution, cost))\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m     \u001b[39mif\u001b[39;00m cost \u001b[39m<\u001b[39m best_cost:\n",
+      "\u001b[1;32m/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO Notebook.ipynb Cell 6\u001b[0m line \u001b[0;36m6\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=59'>60</a>\u001b[0m visited \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(path)\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=61'>62</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mlen\u001b[39m(path) \u001b[39m<\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_cities:\n\u001b[0;32m---> <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=62'>63</a>\u001b[0m     next_city \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mselect_next_city(path[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m], visited)\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=63'>64</a>\u001b[0m     path\u001b[39m.\u001b[39mappend(next_city)\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=64'>65</a>\u001b[0m     visited\u001b[39m.\u001b[39madd(next_city)\n",
+      "\u001b[1;32m/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO Notebook.ipynb Cell 6\u001b[0m line \u001b[0;36m7\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=72'>73</a>\u001b[0m probabilities \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=74'>75</a>\u001b[0m \u001b[39mfor\u001b[39;00m city \u001b[39min\u001b[39;00m unvisited_cities:\n\u001b[0;32m---> <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=75'>76</a>\u001b[0m     tau \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpheromone_matrix[current_city][city] \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39malpha\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=76'>77</a>\u001b[0m     eta \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meta[current_city][city] \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbeta  \u001b[39m# Use precomputed eta value\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bc-server/home/calnan/Documents/Nature-Inspired-Computing-CA/ACO%20Notebook.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=77'>78</a>\u001b[0m     probabilities\u001b[39m.\u001b[39mappend(tau \u001b[39m*\u001b[39m eta)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\r"
      ]
     }
@@ -390,12 +553,14 @@
     "    (best_cost, best_solution), best_param_set = min(results, key=lambda x: x[0][0])\n",
     "    \n",
     "    print(\"Best Result:\", best_cost)\n",
-    "    print(\"Best Parameter Set:\", best_param_set)\n"
+    "    print(\"Best Parameter Set:\", best_param_set)\n",
+    "\n",
+    "# 15 seconds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
